tests/paczka1/fuzzy1/11662692.err
Error in line 1: 4JnR S849 14,3
Error in line 5: tuRZT8u7oy S849 99,4
Error in line 7: xKqyKOFL S849 23,8
Error in line 25: 4JnR S671 -1,7
Error in line 8: 4JnR S671 5,1
Error in line 20: CBER1vY1R S537 89,6
Error in line 33: CBER1vY1R S849 -2,7
Error in line 37: A9WCMD A824 2n,n
Error in line 29: A9WCMD A824 57,0
